test/must_fail/api/must_fail_dir_not_string.ngjs
#!/usr/bin/env ngspicejs
// string arg needed
// linter: ngspicejs-lint
"use strict";

dir(123);
